# detox

./: CMakeLists.txt  README.md
gnn_training/: GNN_asscript_kfold_grouped_val.py
src/: CMakeLists.txt  alignment.cpp  alignment.h  arc.h  correctgraph.cpp  correctgraph.h  coverage.cpp  coverage.h  crfmult.cpp  crfmult.h  dbgraph.cpp  dbgraph.h  debug.cpp  dsnode.cpp  dsnode.h  global.h  graphaln.cpp  graphaln.h  kmernpp.cpp  kmernpp.h  kmeroverlap.h  kmeroverlaptable.cpp  kmeroverlaptable.h  kmertable.cpp  kmertable.h  library.cpp  library.h  main.cpp  nninference.cpp  nninference.h  nodechain.cpp  nodechain.h  nodeendstable.h  nodetracker.cpp  nodetracker.h  pathinfo.cpp  pathinfo.h  readaln.cpp  readaln.h  refcomp.cpp  (+7 more)
src/kmer/: nucleotide.h  tkmer.h  tstring.cpp  tstring.h
src/libdai/: bp.cpp
src/libdai/dai/: bp.h
src/pgm/: factor.cpp  factor.h  pgminference.cpp  pgminference.h
src/readfile/: fasta.cpp  fasta.h  fastafile.cpp  fastafile.h  fastq.cpp  fastq.h  fastqfile.cpp  fastqfile.h  rawfile.cpp  rawfile.h  readfile.cpp  readfile.h  samfile.cpp  samfile.h  seqfile.cpp  seqfile.h  sequencefile.cpp  sequencefile.h
